feat: create connect wallet page

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,3 +1,6 @@
 {
-  "connectWalletPage": "Connect wallet"
+  "connectWalletPage": {
+    "title": "Your Ethereum Wallet Hub",
+    "button": "Connect to Metamask"
+  }
 }
