--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,5 +2,13 @@
   "connectWalletPage": {
     "title": "Your Ethereum Wallet Hub",
     "button": "Connect to Metamask"
+  },
+  "walletStatePage": {
+    "title": "Your Wallet State",
+    "addressLabel": "Address",
+    "popover": {
+      "connectWalletLabel": "Connected Wallet",
+      "disconnectWallet": "Disconnect"
+    }
   }
 }
