fix: move copy to dictionary

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,5 +10,9 @@
       "connectWalletLabel": "Connected Wallet",
       "disconnectWallet": "Disconnect"
     }
+  },
+  "copyToClipboard": {
+    "copy": "Copy",
+    "copied": "Copied!"
   }
 }
