--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,6 +11,19 @@
       "disconnectWallet": "Disconnect"
     }
   },
+  "transferPage": {
+    "title": "Transfer",
+    "balance": "Balance:",
+    "transferBtn": "Transfer",
+    "backToWallet": "Back to wallet",
+    "validationErrors": {
+      "notANumber": "Value is not a number",
+      "notAPositiveNumber": "Value has to be greater that zero",
+      "invalidDecimals": "Incorrect decimal expansion. Max {{decimals}} decimals",
+      "invalidAddress": "Invalid address",
+      "insufficientFunds": "Insufficient funds"
+    }
+  },
   "copyToClipboard": {
     "copy": "Copy",
     "copied": "Copied!"
